--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -1,5 +1,5 @@
 .navbar {
-    height: 100px;
+    height: 150px;
     background: #fff;
 
     ul {
@@ -34,4 +34,11 @@
 
 .a:hover {
     color: rgb(22, 118, 136);
+}
+
+.social__wrap {
+  display: inline-block;
+  width: 32px;
+  margin-right: 15px;
+  text-align: center;
 }
